<resources>
    <string name="app_name">Go Space_(IPT)</string>
    <string name="login">Login Admin</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="signin_using_google">Sign in using Google</string>
    <string name="or">--- OR ---</string>
    <string name="register">Register</string>
    <string name="dont_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="user_login">User Login</string>
    <string name="login1">Login</string>
    <string name="welcome">WELCOME</string>
    <string name="a_room_management_app">A Room Management App</string>
    <string name="get_started">Get Started</string>
    <string name="developed_by">Developed by:</string>
    <string name="admin">Admin</string>
    <string name="user">User</string>
    <string name="choose_a_user_to_sign_in">Choose a user to Sign in</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="close_button_description">Close</string>
    <string name="don_t_have_account_yet">Don\'t have Account yet?</string>
    <string name="register_an_account">Register an Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="role">Role:</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="acount_settings">Acount Settings</string>
    <string name="old_password">Old Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="new_password">New Password</string>
    <string name="delete_account">Delete Account</string>
    <string name="save">Save</string>
    <string name="account_settings">Account Settings</string>
    <string name="update_pass">Update Password</string>
    <string name="back">Back</string>
    <string name="update">Update</string>
    <string name="loading">Loading</string>
    <string name="trash">trash</string>
    <string name="add_room">Add Room</string>
    <string name="all_room">All Room</string>
    <string name="cancel">Cancel</string>
    <string name="room_name">Room Name</string>
    <string name="logout">Logout</string>
    <string name="background">Background</string>
    <string name="aces_logo">ACES Logo</string>
    <string name="request_room">Request Room</string>
    <string name="message">Message</string>
    <string name="set_time_schedule">Set Time Schedule</string>
    <string name="scheduled_time_none">Scheduled Time: None</string>
    <string name="scheduled_by">Scheduled By:</string>
    <string name="status">Status</string>
    <string name="type_your_message_here">Type your Message here</string>
    <string name="add_user">Add User</string>
    <string name="user_list">User List</string>
    <string name="room_number">Room Number</string>
    <string name="recent_room_borrowed">Recent Notification</string>
    <string name="terms_condition"><![CDATA[Terms & Condition]]></string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="cancel_request">Cancel Request</string>
    <string-array name="role_options">
        <item>Admin Root</item>
        <item>GSO</item>
    </string-array>
    <string-array name="room_type">
        <item>Normal</item>
        <item>Laboratory</item>
        <item>Others</item>
    </string-array>
    <string-array name="gender_options">
        <item>Male</item>
        <item>Female</item>
        <item>LGBTQ</item>
    </string-array>
    <string-array name="room_status">
        <item>Available</item>
        <item>Unavailable</item>
    </string-array>
    <string-array name="user_role">
        <item>Faculty</item>
        <item>Staff</item>
        <item>Student</item>
    </string-array>


</resources>