<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".AddRoomAdmin">

    <ImageButton
        android:id="@+id/back"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/back"
        android:scaleType="fitXY"
        android:background="@android:color/transparent"
        android:layout_marginStart="15dp"
        android:src="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/aces_logo"
        android:contentDescription="@string/aces_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/room_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/room_name"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView8"
        app:layout_constraintStart_toStartOf="@+id/imageView8"
        app:layout_constraintTop_toBottomOf="@+id/imageView8" />

    <ImageView
        android:id="@+id/availability"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="1dp"
        android:src="@drawable/green_dot"
        app:layout_constraintBottom_toBottomOf="@+id/status"
        app:layout_constraintEnd_toStartOf="@+id/status"
        app:layout_constraintTop_toTopOf="@+id/status" />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/room_name"
        app:layout_constraintStart_toStartOf="@+id/room_name"
        app:layout_constraintTop_toBottomOf="@+id/room_name" />

    <TextView
        android:id="@+id/schedtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scheduled_by"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/status" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:layout_marginStart="15dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/schedtext"
        app:layout_constraintTop_toBottomOf="@+id/schedtext" />

    <TextView
        android:id="@+id/role"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/role"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/name" />


    <Button
        android:id="@+id/scheduleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        android:text="@string/set_time_schedule"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="@+id/schedtext"
        app:layout_constraintTop_toBottomOf="@+id/role" />

    <TextView
        android:id="@+id/scheduleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scheduled_time_none"
        android:textSize="22sp"
        android:layout_marginTop="15dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/scheduleButton"
        app:layout_constraintTop_toBottomOf="@+id/scheduleButton" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/message"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/scheduleText"
        app:layout_constraintTop_toBottomOf="@+id/scheduleText" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:inputType="text"
        android:gravity="top"
        android:hint="@string/type_your_message_here"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <Button
        android:id="@+id/requestBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/request_room"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginBottom="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>